--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Memorama de Probabilidad</h1>
     <p>Encuentra la pareja correcta entre pregunta y respuesta</p>
-    <div id="game-board"></div>
+    <div id="board"></div>
     <script src="script.js"></script>
 </body>
 </html>
